fix the dark mode for pictures
 - white background and
 - rounded corners

--- a/Documentation/doc/resources/1.14.0/cgal_stylesheet.css
+++ b/Documentation/doc/resources/1.14.0/cgal_stylesheet.css
@@ -208,6 +208,14 @@ a.el {
   vertical-align: middle;
 }
 
+@media (prefers-color-scheme: dark) {
+
+  .image > img {
+    border-radius: 1ex;
+    background: white;
+  }
+}
+
 .PkgAuthors {
   font-style: italic;
 }
